Table is updated when deleting

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -103,7 +103,7 @@
                         <span>Aljezur</span>
                         <span>2018-01-01</span>
                         <span>2018-12-31</span>
-                        <span><a href=" https://www.google.com/maps/dir/?api=1&destination=37.352141,-8.843425" target="_blank">Ver</a></span>
+                        <span><a href="https://www.google.com/maps/dir/?api=1&destination=37.352141,-8.843425" onclick="window.open(this.href,'_blank')">Ver</a></span>
                         <span class="action-icons">
                             <a class="edit-form" data-category="place" data-place-id="1">
                                 <img src="assets/img/edit.svg" alt="" srcset="">
@@ -116,7 +116,7 @@
                         <span>Albufeira</span>
                         <span>2018-01-01</span>
                         <span>2018-12-31</span>
-                        <span><a href="https://www.google.com/maps/dir/?api=1&destination=37.015578,-7.920545" target="_blank">Ver</a></span>
+                        <span><a href="https://www.google.com/maps/dir/?api=1&destination=37.015578,-7.920545" onclick="window.open(this.href,'_blank')">Ver</a></span>
                         <span class="action-icons">
                             <a class="edit-form" data-category="place" data-place-id="2">
                                 <img src="assets/img/edit.svg" alt="" srcset="">
