--- a/src/login.html
+++ b/src/login.html
@@ -10,10 +10,10 @@
     <div class="page-wrapper">
         <img class="self-center" src="assets/img/logo.png" alt="Imagem do administractor" srcset="">
         <form action="./dashboard.html" class="login-form">
-            <label for="">Email</label>
-            <input type="text" name="adminEmail">
+            <label for="username">Utilizador</label>
+            <input type="text" name="adminUsername" id="adminUsername">
             <label for="adminPassword">Password</label>
-            <input type="password" name="adminPassword">
+            <input type="password" name="adminPassword" id="adminPassword">
 
             <button type="submit" class="btn btn-primary">Entrar</button>
             </form>
