Added access_token to instagram dynamically from DB

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -65,6 +65,7 @@
                     <button class="btn-form-insert add-data" id="admin-edit-password">Adicionar</button> 
                 </div>
             </form>
+            <a class="btn btn-primary self-center" href="https://www.instagram.com/oauth/authorize/?client_id=34e4dc127ef64f86b2e8a1f2708948aa&redirect_uri=https://www.bomaoquadrado.pt&response_type=token" onclick="window.open(this.href,'_blank')">Instagram</a>
             <button class="show-settings btn-auto btn-primary self-center">
                 Voltar
             </button>
