Added languages menu

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,17 @@
                 <div class="road-map-locator">
                     <div id="calendar"></div>
                 </div>
-                <a id="show-locator" href="#" class="btn" style="align-self: end;">Onde estamos ? Clique aqui</a>
+                <div class="calendar-language-delimiter">
+                    <a id="show-locator" href="#" class="btn" style="align-self: end;">Onde estamos ? Clique aqui</a>
+                    <div class="custom-select">
+                        <select>
+                          <option value="pt" class="lang-display-short">PT</option>
+                          <option value="pt" class="lang-display-long">Português</option>
+                          <option value="en" class="lang-display-short">EN</option>
+                          <option value="en" class="lang-display-long">English</option>
+                        </select>
+                    </div>
+                </div>
             </div>
             <div class="top-stripe"></div>
             <img src="assets/img/logo.png" class="logo-landing-page" alt="">
