--- a/src/index.html
+++ b/src/index.html
@@ -58,14 +58,10 @@
                 </div>
                 <div class="calendar-language-delimiter">
                     <a id="show-locator" href="#" class="btn" style="align-self: end;">Onde estamos ? Clique aqui</a>
-                    <div class="custom-select">
-                        <select>
-                          <option value="pt" class="lang-display-short">PT</option>
-                          <option value="pt" class="lang-display-long">Português</option>
-                          <option value="en" class="lang-display-short">EN</option>
-                          <option value="en" class="lang-display-long">English</option>
-                        </select>
-                    </div>
+                    <select class="custom-select">
+                        <option value="pt">PT</option>
+                        <option value="en">EN</option>
+                    </select>
                 </div>
             </div>
             <div class="top-stripe"></div>
