Cookie notification is done.

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,13 @@
     </script>
 </head>
 <body>
+    <div class="cookie-modal">
+        <p>Ao continuar a usar este site, você concorda com o uso de cookies.</p>
+        <div>
+            <button class="btn btn-send cookie-resp" data-cookie-resp="1">Aceito</button>
+            <button class="btn btn-send cookie-resp" data-cookie-resp="0">Não</button>
+        </div>
+    </div>
     <nav class="main-nav card-background-dark" role="navigation">
         <div class="btn nav-toggle">
             <span class="nav-close-icon"><i class="custom-i arrow-right"></i></span>
