Made some changes to the contact form, and removed the cookie notification since it was blocking content behind because of opacity

--- a/src/index.html
+++ b/src/index.html
@@ -294,7 +294,7 @@
                         <textarea name="form-message" class="form-input" cols="30" rows="10" placeholder="A sua mensagem"></textarea>
                         <div style="display: grid; grid-template-columns: 1fr 1fr;">
                                 <span>
-                                    <label for="terms">Li e aceito os termos</label>
+                                    <label for="terms">Li e aceito <a href="#" style="text-decoration: underline !important">os termos</a></label>
                                     <input type="checkbox" name="terms" class="form-input" style="vertical-align: middle; margin: 0 !important">
                                 </span>
                             <div id="lds-ellipsis" class="hide"><div></div><div></div><div></div><div></div></div>
