Underline to a text

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
                     <div id="calendar"></div>
                 </div>
                 <div class="calendar-language-delimiter">
-                    <a id="show-locator" href="#" class="btn" style="align-self: end;">Onde estamos ? Clique aqui</a>
+                    <a id="show-locator" href="#" class="btn" style="align-self: end;">Onde estamos ? <span style="text-decoration: underline">Clique aqui</span></a>
                     <select class="custom-select">
                         <option value="pt">PT</option>
                         <option value="en">EN</option>
