--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,22 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/fontawesome.css" integrity="sha384-HU5rcgG/yUrsDGWsVACclYdzdCcn5yU8V/3V84zSrPDHwZEdjykadlgI6RHrxGrJ" crossorigin="anonymous">
     <script>
         const instagramToken =  '5673767342.34e4dc1.74c0ab47e61c4079a6fb028428fe32e7';
+        const events = [
+            {
+                title: 'Albufeira22',
+                start: '2019-06-01',
+                end: '2019-06-07',
+                description: 'This is a cool event',
+                url: 'https://www.google.com/maps/dir/?api=1&destination=37.015578,-7.920545'
+            },
+            {
+                title: 'Aljezur',
+                start: '2018-12-07',
+                end: '2018-12-10',
+                description: 'This is a cool event',
+                url: 'https://www.google.com/maps/dir/?api=1&destination=37.352141,-8.843425'
+            }
+        ];
     </script>
 </head>
 <body>
