--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -70,11 +70,11 @@
                     <a class="btn-form-insert self-center" href="https://www.instagram.com/oauth/authorize/?client_id=34e4dc127ef64f86b2e8a1f2708948aa&redirect_uri=https://www.bomaoquadrado.pt&response_type=token" onclick="window.open(this.href,'_blank')">
                         Novo
                     </a>
-                    <input type="text" name="access_token" data-category="access_token" placeholder="Novo token">
+                    <input type="text" name="access_token" data-category="token-add-input" placeholder="Novo token">
                 </div>
                 <div class="insert-btns">
                     <div></div>
-                    <button class="btn-form-insert add-data" id="admin-edit-token">Adicionar</button> 
+                    <button class="btn-form-insert add-data" id="token-add-input">Adicionar</button> 
                 </div>
             </form>
             <button class="show-settings btn-auto btn-primary self-center">
