Updated calendar settings so it reflect language change

--- a/client_side/src/index.html
+++ b/client_side/src/index.html
@@ -25,6 +25,10 @@
                 url: 'https://www.google.com/maps/dir/?api=1&destination=37.352141,-8.843425'
             }
         ];
+        const calenderConfig = {
+            locale: 'en',
+            today: 'today'
+        }
     </script>
 </head>
 <body>
