Page working in 2 languages. Need to load products and flavours, and able to send message.

--- a/client_side/src/index.html
+++ b/client_side/src/index.html
@@ -29,6 +29,10 @@
             locale: 'en',
             today: 'today'
         }
+        const sendMessageResp = {
+            success: 'Mensagem enviada &#10003;',
+            fail: 'failed'
+        }
     </script>
 </head>
 <body>
